--- a/my_vehicle_description/config/vehicle_info.param.yaml
+++ b/my_vehicle_description/config/vehicle_info.param.yaml
@@ -1,12 +1,12 @@
 /**:
   ros__parameters:
-    wheel_radius: 0.383 # The radius of the wheel, primarily used for dead reckoning.
-    wheel_width: 0.235 # The lateral width of a wheel tire, primarily used for dead reckoning.
-    wheel_base: 2.79 # between front wheel center and rear wheel center
-    wheel_tread: 1.64 # between left wheel center and right wheel center
-    front_overhang: 1.0 # between front wheel center and vehicle front
-    rear_overhang: 1.1 # between rear wheel center and vehicle rear
-    left_overhang: 0.128 # between left wheel center and vehicle left
-    right_overhang: 0.128 # between right wheel center and vehicle right
-    vehicle_height: 2.5
+    wheel_radius: 0.55 # The radius of the wheel, primarily used for dead reckoning.
+    wheel_width: 0.2 # GUESS--The lateral width of a wheel tire, primarily used for dead reckoning.
+    wheel_base: 2.56 # between front wheel center and rear wheel center
+    wheel_tread: 1.4 # GUESS--between left wheel center and right wheel center
+    front_overhang: 0.7 # GUESS--between front wheel center and vehicle front
+    rear_overhang: 0.7 # GUESS--between rear wheel center and vehicle rear
+    left_overhang: 0.1 # GUESS--between left wheel center and vehicle left
+    right_overhang: 0.1 # GUESS--between right wheel center and vehicle right
+    vehicle_height: 2.58 
     max_steer_angle: 0.70 # [rad]
