--- a/my_vehicle_launch/package.xml
+++ b/my_vehicle_launch/package.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>My_vehicle_launch</name>
+  <name>my_vehicle_launch</name>
   <version>0.1.0</version>
-  <description>My_vehicle_launch package</description>
+  <description>my_vehicle_launch package</description>
   <maintainer email="ryohsuke.mitsudome@tier4.jp">Ryohsuke Mitsudome</maintainer>
   <maintainer email="yukihiro.saito@tier4.jp">Yukihiro Saito</maintainer>
   <license>Apache 2.0 License</license>
