--- a/my_vehicle_description/package.xml
+++ b/my_vehicle_description/package.xml
@@ -3,7 +3,7 @@
 <package format="3">
   <name>my_vehicle_description</name>
   <version>0.1.0</version>
-  <description>My vehicle_description package</description>
+  <description>my_vehicle_description package</description>
   <maintainer email="ryohsuke.mitsudome@tier4.jp">Ryohsuke Mitsudome</maintainer>
   <maintainer email="yukihiro.saito@tier4.jp">Yukihiro Saito</maintainer>
   <license>Apache 2.0 License</license>
